# ChangeLog for net-p2p/transmission
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/transmission/ChangeLog,v 1.72 2009/01/15 22:34:25 loki_val Exp $

  15 Jan 2009; Peter Alfredsen <loki_val@gentoo.org> metadata.xml:
  Compnerd retired.

  02 Jan 2009; <ssuominen@gentoo.org> transmission-1.42.ebuild:
  Enabling and disabling nls support is misbehaving wrt #253460, thanks to
  Torsten Rehn.

  01 Jan 2009; <ssuominen@gentoo.org>
  +files/transmission-1.42-respect_flags.patch, transmission-1.42.ebuild:
  Update icon cache. Fix LICENSE, since web/ directory includes GPL-2. Move
  glib dep. behind USE gtk. Patch to respect user cflags and cxxflags.

*transmission-1.42 (01 Jan 2009)

  01 Jan 2009; <ssuominen@gentoo.org> +transmission-1.42.ebuild:
  Version bump.

  17 Nov 2008; Diego E. Pettenò <flameeyes@gentoo.org>
  files/transmission-1.11-libnotify-option.patch:
  Fix patch with absolute paths.

  07 Sep 2008; Markus Meier <maekke@gentoo.org> transmission-1.22.ebuild:
  amd64/x86 stable, bug #236544

  06 Sep 2008; nixnut <nixnut@gentoo.org> transmission-1.22.ebuild:
  Stable on ppc wrt bug 236544

  04 Sep 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  transmission-1.22.ebuild:
  Fix deps for transmission

*transmission-1.33 (04 Sep 2008)

  04 Sep 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  +transmission-1.33.ebuild:
  Version bump from upstream

*transmission-1.22 (08 Jul 2008)

  08 Jul 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  +transmission-1.22.ebuild:
  Version bump from upstream

*transmission-1.20 (13 May 2008)

  13 May 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  +files/transmission-daemon, +transmission-1.20.ebuild:
  Version bump from usptream (fixes bugs #218586, #221859)

  04 May 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  -transmission-0.82.ebuild, -transmission-1.0.4.ebuild,
  -transmission-1.0.6.ebuild:
  Prune unused versions
