@@ -2,6 +2,8 @@ AUX transmission-1.42-respect_flags.patch 519 RMD160 a8e9b6857d0c376668121c596f4
 AUX transmission-1.42-solaris-no-utility.patch 523 RMD160 7262802b8ba20cc0150b10b072ddfdf943439abb SHA1 3eb223f33e3d974eba0ecc4a407c45b14c806d9e SHA256 f3321d8da50e09596aab91ea5041b129dc51dcadd6d8e52e9619ef380bd6337b
 AUX transmission-daemon 691 RMD160 4b7b3a98cc49a2c541dfb69eb881109590d97255 SHA1 8099bb0434d44bd814e8b845f06790484d98257d SHA256 8f6f37138ec921fe5a273cdd3f9955192050c4755240f87f3d34044347b21a8d
 DIST transmission-1.42.tar.bz2 4630409 RMD160 fbe2a185a16930136ef6b9f56828f63873e6188a SHA1 109ef121bc4d032c78b14d7d3934f20a5ed98035 SHA256 e7e17f29a166794017c6d94362159337f14008c414d1f8da5f7c2c1c05c7d543
+DIST transmission-1.52.tar.bz2 4641665 RMD160 4275f5e172da734be93ab85ea26cc3fe3ca04495 SHA1 c3df61e350659960a5886a475c234f53b7fded26 SHA256 30e0035984901f2348d5c1863e8104df5739b18acdf52216b4935e1eaee221fa
 EBUILD transmission-1.42.ebuild 1540 RMD160 45031eec3f73f2958b7534001e7ab7998d6f37d1 SHA1 a41fd606cf92d768139f8431d353947256364473 SHA256 c84f0fccabfadb5ca4668ca7da42094caa07ba6148890bb943e2e68f2e4a3d77
-MISC ChangeLog 10773 RMD160 8280ac989883a07ad391dde503dd54a63d264999 SHA1 58d4e94f872aab422ec79f974f8f3c994aa54e3a SHA256 051f2bef9a99559c340339e35fc22d2acbdbdbf31079391f4878059498d0be9a
+EBUILD transmission-1.52.ebuild 1559 RMD160 971cf9eef7a144a208d22d682df6021c4c7dc817 SHA1 a2ff3ae3172cbec0419b53ca66117a7694ed5fac SHA256 6a24e79583b5c97acbfe01b50316e89e0d9162003e199c8690d1dca446a74fd3
+MISC ChangeLog 10930 RMD160 69e8abacdc09b259fa5949ef3067fd199632cc3a SHA1 338abea06b318ba894563ec172046acf81fda9aa SHA256 acd8d599480b64fe87dbedd5fc102fa2bde2dfc68cc39c0ae021a1da8273b5a9
 MISC metadata.xml 160 RMD160 828887200387b28c37fc97111fc6bc3a0a2fcccd SHA1 813ef5bc57f6a8d95e7cab7a745a2a824858f49c SHA256 fe06593409e7f28665c032001005e94cb650299711a0af7f1a558bdb56c4004f
